# signito-vault

./: Anchor.toml  Cargo.toml  README.md  idl.json
.github/workflows/: verifiable-build.yml  verify.yml
programs/: Anchor.toml
programs/signito-vault/src/: constants.rs  lib.rs
programs/signito-vault/src/instructions/: burn_and_queue.rs  claim_airsign.rs  close_account.rs  close_decoy.rs  init_stoken_metadata.rs  initialize_pool.rs  mod.rs  private_send.rs  refresh_ots.rs  shield.rs  withdraw_funder.rs
programs/signito-vault/src/state/: funder.rs  mod.rs  vault.rs
programs/signito-vault/tests/: signito_vault.ts
signito-vault/src/: lib.rs
signito-vault/src/instructions/: close_account.rs  decoy_shield.rs  deposit_funder.rs  fund_fresh_relayer.rs  mod.rs  set_relayer.rs
signito-vault/src/state/: mod.rs
src/: errors.rs  lib.rs
src/instructions/: admin_mint.rs  burn_and_queue.rs  close_decoy.rs  decoy_burn.rs  decoy_shield.rs  deposit.rs  init_funder.rs  initialize_pool.rs  mint_airsign.rs  mod.rs  private_send.rs  process_queue.rs  rotate_mint.rs  shield.rs
src/state/: pool.rs  user.rs
