[package]
name = "signito-vault"
version = "0.1.0"
description = "Signito SafeVault: non-custodial OTS Protocol vault for SPL Token-2022 on Solana"
authors = ["Signito Protocol <contact@signito.org>"]
homepage = "https://signito.org"
license = "MIT"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "signito_vault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1", features = ["token", "token_2022", "associated_token"] }
spl-token = { version = "6.0.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "6.0.0", features = ["no-entrypoint"] }
spl-token-metadata-interface = { version = "0.4" }
spl-associated-token-account = { version = "4.0.0", features = ["no-entrypoint"] }
solana-security-txt = "1.1.1"
